# coin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  StackInstallationExample.md  build_install.sh  build_raspi.sh
.github/workflows/: cpp_linux_x86.yaml
cmake/: arm_build.cmake
include/Coin/: Robot.h
include/Coin/Actuator/: ActuatorBase.h  Arm.h  Caqueteur.h  Finger.h  HMI.h  Hat.h  ReplicaHolder.h  SerialDucklinkActuator.h  StackManager.h  StackerProcedure.h  StatuetteArm.h
include/Coin/Behavior/: BehaviorBase.h  Slave.h  Timer.h
include/Coin/Behavior/Match/: Action.h  ActionFSM.h  ActionJuggler.h  AlignDiffAction.h  DropHexaInGallery.h  ExcavationAction.h  ExposeStatuetteAction.h  GoToAction.h  GoToDiffAction.h  HexaAction.h  IndianaJones.h  PreMatchAction.h  Strat1.h  StratCrolonome1.h  StratDalek1.h  WaitForMatchTimeAction.h
include/Coin/Communication/: CommunicationBase.h  IvyHandler.h  JSONInterface.h  UDPJson.h
include/Coin/Communication/Ducklink/: DucklinkReceiver.h  SerialDucklink.h  UDPDucklink.h  UDPDucklinkCommunication.h
include/Coin/Locomotion/: Locomotion.h
include/Coin/Sensors/: GPIOHandler.h  VL6180.h
include/Coin/Table/: Colors.h  Dispenser.h  ExcavationSquare.h  Gallery.h  Hexa.h  Table.h  WorkShed.h
src/: Robot.cpp  main.cpp  mainCoupeOff.cpp  mainCrolonome.cpp  mainDalek.cpp
src/Actuator/: Arm.cpp  Finger.cpp  HMI.cpp  Hat.cpp  ReplicaHolder.cpp  StackManager.cpp  StatuetteArm.cpp
src/Behavior/: Slave.cpp
src/Behavior/Match/: Action.cpp  ActionJuggler.cpp  DropHexaInGallery.cpp  ExcavationAction.cpp  ExposeStatuetteAction.cpp  HexaAction.cpp  IndianaJones.cpp  PreMatchAction.cpp
src/Communication/: IvyHandler.cpp  UDPJson.cpp
src/Communication/Ducklink/: SerialDucklink.cpp  UDPDucklink.cpp  UDPDucklinkCommunication.cpp
src/Locomotion/: Locomotion.cpp
src/Sensors/: VL6180.cpp
src/Table/: Dispenser.cpp  ExcavationSquare.cpp  Hexa.cpp  Table.cpp  WorkShed.cpp
